<resources>
    <string name="app_name">AnayaJuan_CE06</string>
    <string name="city">City</string>
    <string name="local_time">Local Time</string>
    <string name="utc_offset">Utc Offset</string>
    <!--App Resources-->
    <string name="observation_Time">Observation Time</string>
    <string name="temp_c">Temp C</string>
    <string name="temp_f">Temp F</string>
    <string name="temps_feels_like_f">Temps Feels like F</string>
    <string name="temp_feels_like_c">Temp Feels like C</string>
    <string name="weather_description">WeatherDescription</string>
    <string name="wind_mi">Wind Mi</string>
    <string name="wind_km">Wind Km</string>
    <string name="weather_online">Weather Online</string>
    <string name="humidity">Humidity</string>
    <string name="c_celsius">C</string>
    <string name="F_fahrenheit">F</string>
    <string name="api_icon">API_ICON</string>
    <string name="humidity_icon">Humidity_Icon</string>
    <string name="thermometer_icon">Thermometer_Icon</string>
    <string name="miles_per_hour">Mph</string>
    <string name="kmph">KMph</string>
    <string name="windmill_icon">Windmill</string>
    <string name="max">MAX</string>
    <string name="min">MIN</string>
    <string name="_3_day_forecast">3 Day Forecast</string>
    <string name="sun_icon">Sun</string>
    <string name="moonrise_moonset">MoonRise/Moonset</string>
    <string name="sunrise_sunset">Sunrise/Sunset</string>
    <string name="date_">Date</string>
    <string name="time_">Time</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="reload">Reload</string>
    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="aug">Aug</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>
    <string name="mont_average">Month Avg</string>
    <string name="weather_icon">Weather_Icon</string>
    <!--Data-->
    <string-array name="Cities">
        <item>Orlando</item>
        <item>MexicoCity</item>
        <item>SanFrancisco</item>
        <item>Barcelona</item>
    </string-array>
    <string-array name="Theme">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string name="ThemeLight">Light</string>
    <string name="ThemeDark">Dark</string>
    <!--KEYS-->
    <string name="weather_key">weather_key</string>
    <string name="widget_id">widget_id_key</string>
</resources>
