<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--Observation Time-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryTransparent"
            android:orientation="vertical">
            <!--Content-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="Current Weather"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"/>
            <!--Weather Icon-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryTransparent"
                android:orientation="horizontal">
                <!--Icon-->
                <ImageView
                    android:id="@+id/ImageView_CurrentCondition_Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:src="@drawable/wind_gauge" />
                <!--Time-->
                <TextView
                    android:id="@+id/TextView_CurrentCondition_Time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/observation_Time"
                    android:textAlignment="textEnd"
                    android:textSize="12sp" />
            </LinearLayout>
            <!--Weather Description-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!--Description-->
                <TextView
                    android:id="@+id/TextView_CurrentCondition_Description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/weather_description"
                    android:textAlignment="textStart"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <!--Temperature-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8sp"
                android:orientation="horizontal">
                <!--Thermometer-->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="0.44"
                    android:contentDescription="@string/thermometer_icon"
                    android:scaleX="0.4"
                    android:scaleY="0.4"
                    android:src="@drawable/temperature" />
                <!--Celsius-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.33"
                    android:orientation="vertical">
                    <!--Celsius Desc-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/c_celsius"
                        android:textAlignment="center" />
                    <!--C-->
                    <TextView
                        android:id="@+id/TextView_CurrentCondition_TempC"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimaryTransparent"
                        android:hint="@string/temp_c"
                        android:padding="8sp"
                        android:textSize="16sp"
                        android:textColor="@android:color/white"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.33"
                    android:orientation="vertical">
                    <!--Fahrenheit Desc-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/F_fahrenheit"
                        android:textAlignment="center" />
                    <!--F-->
                    <TextView
                        android:id="@+id/TextView_CurrentCondition_TempF"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimaryTransparent"
                        android:hint="@string/temp_f"
                        android:padding="8sp"
                        android:textSize="16sp"
                        android:textColor="@android:color/white"/>
                </LinearLayout>
            </LinearLayout>
            <!--Temperature Feel-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8sp">
                <!--Thermometer-->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="0.44"
                    android:scaleX="0.4"
                    android:scaleY="0.4"
                    android:src="@drawable/dust" />
                <!--Feels C-->
                <TextView
                    android:id="@+id/TextView_CurrentCondition_TempFeelsC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.33"
                    android:background="@color/colorPrimaryTransparent"
                    android:hint="@string/temp_feels_like_c"
                    android:padding="8sp"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"/>
                <!--Feels F-->
                <TextView
                    android:id="@+id/TextView_CurrentCondition_TempFeelsF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.33"
                    android:background="@color/colorPrimaryTransparent"
                    android:hint="@string/temps_feels_like_f"
                    android:padding="8sp"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"/>
            </LinearLayout>
            <!--Wind Speed-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8sp">
                <!--Windmill-->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="0.44"
                    android:scaleX="0.4"
                    android:scaleY="0.4"
                    android:src="@drawable/paper_windmill" />
                <!--Miles Hr-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.33"
                    android:orientation="vertical">
                    <!--Mph-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/miles_per_hour"
                        android:textAlignment="center" />
                    <!--Wind Speed in Miles-->
                    <TextView
                        android:id="@+id/TextView_CurrentCondition_WindMi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/wind_mi"
                        android:textSize="16sp"
                        android:background="@color/colorPrimaryTransparent"
                        android:padding="8sp"
                        android:textColor="@android:color/white"/>
                </LinearLayout>
                <!--KM Hr-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.33"
                    android:orientation="vertical">
                    <!--KMph-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/kmph"
                        android:textAlignment="center" />
                    <!--Wind Speed in Km-->
                    <TextView
                        android:id="@+id/TextView_CurrentCondition_WindKm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/wind_km"
                        android:textSize="16sp"
                        android:background="@color/colorPrimaryTransparent"
                        android:padding="8sp"
                        android:textColor="@android:color/white"/>
                </LinearLayout>
            </LinearLayout>
            <!--Humidity-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8sp">
                <!--Barometer-->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="0.44"
                    android:contentDescription="@string/humidity_icon"
                    android:scaleX="0.4"
                    android:scaleY="0.4"
                    android:src="@drawable/humidity" />
                <!--Humidity-->
                <TextView
                    android:id="@+id/TextView_CurrentCondition_Humidity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.33"
                    android:hint="@string/humidity"
                    android:textSize="16sp"
                    android:background="@color/colorPrimaryTransparent"
                    android:padding="8sp"
                    android:textColor="@android:color/white"/>
                <!--API Icon-->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.33"
                    android:contentDescription="@string/api_icon"
                    android:src="@drawable/weather_online" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>