<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12sp">
    <!--Astronomy-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!--Icon Left-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@color/colorPrimaryTransparent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sunrise_sunset"
                    android:textAlignment="center"
                    android:textStyle="italic" />
                <!--Sun-->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/sun_icon"
                    android:src="@drawable/sun" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryTransparent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/TextView_Astronomy_DateSun"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:hint="@string/date_"
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/TextView_Astronomy_TimeSun"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/time_"
                        android:textSize="12sp"/>
                </LinearLayout>

            </LinearLayout>
            <!--Icon Right-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@color/colorPrimaryTransparent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/moonrise_moonset"
                    android:textAlignment="center"
                    android:textStyle="italic" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/moon" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryTransparent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/TextView_Astronomy_DateMoon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:hint="@string/date_"
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/TextView_Astronomy_TimeMoon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/time_"
                        android:textSize="12sp"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>